<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_mydm"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_forgotpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/background_small_phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email"
            android:textColor="@color/text_grey"
            android:textSize="12dp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/edit_text_mail"
            style="@style/EditText.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_marginTop="40dp"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="8dp"
            android:hint="@string/your_email"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint_grey"
            android:textSize="14dp"
            android:theme="@style/EditText.Login" />

        <Button
            android:id="@+id/button_send_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/send"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>