<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardBackgroundColor="@color/blue_2"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview_status_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/upload_done"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="Done"
            android:textColor="@color/mydm"
            android:textSize="14dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_status_upload"
            android:id="@+id/layout_title_history"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/file_name"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/total_image"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/doc_type"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/devices"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/scan_time"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/scanned_date"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/cloud"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_status_upload"
            android:orientation="vertical"
            android:layout_toEndOf="@id/layout_title_history"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_filename_history"
                android:layout_marginTop="4dp"
                android:text="scan23054"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_total_history"
                android:layout_marginTop="4dp"
                android:text="60"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_document_type_history"
                android:layout_marginTop="4dp"
                android:text="Invoice"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_devices_history"
                android:layout_marginTop="4dp"
                android:text="Mobile"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_scan_time_history"
                android:layout_marginTop="4dp"
                android:text="12:00:00"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_scanned_date_history"
                android:layout_marginTop="4dp"
                android:text="12/03/2020"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_cloud_history"
                android:layout_marginTop="4dp"
                android:text="Xoontec@icloud.com"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>